--- a/themes/the hollow men/layout/layout.ejs
+++ b/themes/the hollow men/layout/layout.ejs
@@ -7,5 +7,6 @@
             <%- partial('_partial/slider') %>
         </main>
         <%- partial('_partial/stats') %>
+        <%- js('js/scripts') %>
     </body>
 </html>
