--- a/themes/the hollow men/layout/_partial/archive-view.ejs
+++ b/themes/the hollow men/layout/_partial/archive-view.ejs
@@ -12,16 +12,23 @@
 %>
 
 
-<div id="post" class="content">
-    <h5 id="title"><%- title %></h5>
-    <p><% page.posts.each(function(post){ %>
+<div class="post">
+    <div class="post-header">
+        <div class="title">
+            <h1><%- title %></h1>
+        </div>
+    </div>
+    <div class="post-body">
+        <p><% page.posts.each(function(post){ %>
 
-        <div class="archive-date"><%= date(post.date, config.date_format) %></div>
-        <a href="<%- config.root %><%- post.path %>">
-            <%- post.title %>
-        </a>
-        <br>  
-    <% }); %>
+            <div class="archive-date"><%= date(post.date, config.date_format) %></div>
+            <a href="<%- config.root %><%- post.path %>">
+                <%- post.title %>
+            </a>
+            <br>  
+        <% }); %>
+    </div>
+    
 </p>
         
 </div>
