--- a/themes/the hollow men/layout/_partial/slider.ejs
+++ b/themes/the hollow men/layout/_partial/slider.ejs
@@ -20,3 +20,15 @@
     }) %>
     
 </div>
+<div id="archives-menu" class="menu hidden">
+    <h3>archives</h3>
+    
+    <%- list_archives({
+        class: 'item',
+        order: 'asc',
+        show_count: false,
+        style: 'none',
+        separator: ''
+    }) %>
+    
+</div>
