--- a/themes/the hollow men/layout/page.ejs
+++ b/themes/the hollow men/layout/page.ejs
@@ -3,6 +3,7 @@
         <div class="title">
             <h1><%= page.title %></h1>
         </div>
+        <div class="info"></div>
     </div>
     <div class="post-body">
         <%- page.content %>
