tags and footer update

--- a/themes/the hollow men/layout/post.ejs
+++ b/themes/the hollow men/layout/post.ejs
@@ -8,7 +8,7 @@
         <div class="info">
             <span class="time"><i class="far fa-calendar-alt"></i> <%= date(page.date, config.date_format) %></span>
             <span class="time"><i class="far fa-clock"></i> <%= date(page.time, config.time_format) %></span>
-            <span class="tags">filed under: 
+            <span class="categories">filed under: 
                 <% if (page.categories && page.categories.length) { %> 
                     <%- list_categories(page.categories, {
                         show_count: false,
@@ -22,4 +22,12 @@
     <div class="post-body">
         <p><%- page.content %></p>
     </div>
+
+    <% if (page.tags && page.tags.length) { %>
+    <div class="tags">
+        <i class="fas fa-tags"></i>
+        <%- list_tags(page.tags, {show_count: false, separator: ', ', class: 'tags', style: 'none'}) %>
+    </div>
+    <% } %>
+    
 </div>
