--- a/themes/the hollow men/layout/layout.ejs
+++ b/themes/the hollow men/layout/layout.ejs
@@ -6,6 +6,7 @@
             <%- body %>
             <%- partial('_partial/slider') %>
         </main>
+        <%- partial('_partial/footer') %>
         <%- partial('_partial/stats') %>
         <%- js('js/scripts') %>
     </body>
