--- a/themes/the hollow men/source/css/style.css
+++ b/themes/the hollow men/source/css/style.css
@@ -48,8 +48,6 @@ header {
     justify-content: center;
     align-items:center;
     max-width: 700px;
-    flex-grow: 0;
-    flex-shrink: 1;
     position:relative;
     /* border-bottom: 1px solid #eee; */
 }
@@ -70,6 +68,7 @@ nav.navbar {
     padding: 2px;
     border: 2px #f1f1f1 solid;
     text-align: center;
+    max-width: 700px;
 }
 
 #banner img.header {
@@ -91,10 +90,12 @@ a.nav, a.nav:active, a.nav:visited, .nav {
     transition: ease-out 0.3s;
     cursor: pointer;
     overflow: hidden;
+    border-bottom: 0;
 }
 
 a.nav.active, .nav.active {
     border-top:  0.35rem rgba(111, 122, 153) solid;
+    border-bottom: 0;
 }
 
 a.nav:hover, .nav:hover {
